welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: ';' expected but ')' found.
    if(nums(k+1)==nums(k)+5 && nums(k+2)==nums(k)-1) || num(k+2)==num(k)+1 || nums(k+2)==nums(k)-2) || num(k+2)==num(k)+2 {
                                                                                                  ^